[package]
name = "bel"
version = "0.1.0"
edition = "2021"
description = "Generate TypeScript interfaces from Rust structs/traits - useful for JSON RPC"
license = "MIT"
repository = "https://github.com/32leaves/bel"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
regex = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[[example]]
name = "main"
path = "examples/main.rs"
